# gh-wikis

./: .env.example  .gitignore  Dockerfile.dev  README.md  alembic.ini  clear_database.py  docker-compose.yml  end_prompt.md  main.py  pyproject.toml
gh_wikis/: __init__.py  worker.py
gh_wikis/application/commands/: __init__.py  wiki_job_commands.py
gh_wikis/application/events/: __init__.py  publisher.py
gh_wikis/application/queries/: __init__.py  wiki_job_queries.py
gh_wikis/application/services/: wiki_processor.py
gh_wikis/domain/events/: __init__.py  wiki_job_events.py
gh_wikis/domain/model/: wiki_job.py
gh_wikis/domain/repositories/: wiki_job_repository.py
gh_wikis/domain/services/: __init__.py  file_storage.py  github_service.py
gh_wikis/infrastructure/: celery_app.py  config.py
gh_wikis/infrastructure/db/: __init__.py  database.py  models.py  repositories.py
gh_wikis/infrastructure/events/: __init__.py  redis_publisher.py
gh_wikis/infrastructure/migrations/: env.py
gh_wikis/infrastructure/services/: __init__.py  github_service_impl.py  minio_storage.py
gh_wikis/infrastructure/tasks/: __init__.py  wiki_tasks.py
gh_wikis/interfaces/: __init__.py  app.py
gh_wikis/interfaces/api/: __init__.py  dependencies.py  routes.py  schemas.py
gh_wikis/interfaces/web/: __init__.py  routes.py
gh_wikis/interfaces/web/templates/: __init__.py  base.html  home.html  job_detail.html  jobs.html  wikis.html
